--- a/application.yml
+++ b/application.yml
@@ -9,6 +9,7 @@ eureka:
       defaultZone: ${vcap.services.service-registry.credentials.uri:http://127.0.0.1:8761}/eureka/
 
 foo: barnyardAnimal
+greeting: Hai!!
 
 ---
 spring:
